--- a/Rodrigo/index.html
+++ b/Rodrigo/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | QR code component</title>
   <link rel="stylesheet" type="text/css" href="./CSS/style.css">
-</head>
+  <link rel="icon" href="./images/favicon-32x32.png" type="image/png" </head>
 
 <body>
 
